tests/parser/bad/type_t-cid-map-cid-underscore.scilla
scilla_version 0

library TestLib
(* bool is an incorrect map value type *)

let f = fun (x : Option Map Uint128 bool)
let m = True

contract Test
()
